Add initial upload functionality
